--- a/src/main/resources/assets/quark/lang/it_it.json
+++ b/src/main/resources/assets/quark/lang/it_it.json
@@ -115,8 +115,6 @@
 	"quark.camera.filter.pencil": "Matita",
 	"quark.camera.filter.watercolor": "Negativo",
 	"quark.camera.filter.sobel": "Sobel",
-	"quark.camera.filter.sobel": "Sobel",
-	"quark.camera.filter.sobel": "Sobel",
 	"quark.camera.filter.deuteranopia": "Deuteranopia simulata",
 	"quark.camera.filter.protanopia": "Protanopia simulata",
 	"quark.camera.filter.tritanopia": "Tritanopia simulata",
@@ -196,6 +194,8 @@
 	"quark.subtitles.foxhound_growl": "Volpe infernale brontola",
 	"quark.subtitles.foxhound_hurt": "Volpe infernale ferita",
 	"quark.subtitles.foxhound_shake": "Volpe infernale trema",
+	"quark.subtitles.foxhound_eat": "Volpe infernale mangia",
+	"quark.subtitles.foxhound_crackle": "Volpe infernale crepita",
 	"quark.subtitles.frog_die": "Rana gracchia",
 	"quark.subtitles.frog_hurt": "Rana stride",
 	"quark.subtitles.frog_idle": "Rana fa ribbit",
@@ -207,16 +207,25 @@
 	"quark.subtitles.toretoise_hurt": "Mineruga ferita",
 	"quark.subtitles.toretoise_die": "Mineruga si sgretola",
 	"quark.subtitles.toretoise_angry": "Mineruga rompe",
+	"quark.subtitles.toretoise_eat_satiated": "Mineruga fa uno spuntino",
+	"quark.subtitles.toretoise_eat": "Mineruga mangia",
 	"quark.subtitles.toretoise_harvest": "Mineruga ricavata",
 	"quark.subtitles.toretoise_regrow": "Mineruga ricresce",
+	"quark.subtitles.parrot_egg": "Parrot plops",
 	"quark.subtitles.soul_bead.idle": "Perla delle anime emana",
 	"quark.subtitles.growl": "Mostri sorgono",
 	"quark.subtitles.pipe_shoot": "Tubo espelle",
 	"quark.subtitles.pipe_pickup": "Tubo assorbe",
-	"quark.subtitles.pipe_shoot_lenny": "Tubo espelle",
-	"quark.subtitles.pipe_pickup_lenny": "Tubo assorbe",
+	"quark.subtitles.pipe_shoot_lenny": "Tubo viene",
+	"quark.subtitles.pipe_pickup_lenny": "Tubo succhia",
+	"quark.subtitles.do_it": "FALLO",
+	"quark.subtitles.potato_hurt": "Patata ferita",
 	"quark.subtitles.camera_shutter": "Macchina fotografica scatta",
 	"quark.subtitles.soulpowder_scream": "Anima scappa",
+	"quark.subtitles.pet.device": "Giocatore emette segnale acustico",
+	"quark.subtitles.pet.neko": "Giocatore fa le fusa",
+	"quark.subtitles.pet.slime": "Giocatore schiaccia",
+	"quark.subtitles.pet.wire": "Giocatore sospira",
 	"quark.subtitles.ambient.drips": "Acqua gocciola",
 	"quark.subtitles.ambient.ocean": "Onde oceaniche leggere",
 	"quark.subtitles.ambient.rain": "Pioggia battente",
@@ -253,6 +262,13 @@
 	"quark.misc.saturation2": "Pasto",
 	"quark.misc.saturation3": "Pasto leggero",
 	"quark.misc.saturation4": "Spuntino leggero",
+	"quark.misc.saturation5": "Full-Course Meal",
+	"quark.misc.bad_saturation0": "Worryingly Fulfilling",
+	"quark.misc.bad_saturation1": "Disturbingly Hearty",
+	"quark.misc.bad_saturation2": "Ill-Advised Meal",
+	"quark.misc.bad_saturation3": "Questionable Rations",
+	"quark.misc.bad_saturation4": "Disgusting Snack",
+	"quark.misc.bad_saturation5": "Dangerously Tantalizing",
 	"quark.misc.mod_disabled": "Disattivato. Installa %s per attivare.",
 	"quark.misc.repaired": "(Riparato)",
 	"quark.misc.celebration": "Festeggiando 10 anni di mod di Vazkii (2021)",
@@ -260,7 +276,30 @@
 	"quark.misc.autowalking": "Camminata automatica",
 	"quark.misc.rightclick_to_craft": "Fare clic con il tasto destro per fabbricare",
 	"quark.misc.opened_screen": "Schermo aperto %s",
+	"quark.misc.trash_item": "Fare clic con il tasto destro per cestinare l'oggetto",
+	"quark.misc.my_son": "Don't talk to me or my son ever again.",
+	"quark.misc.my_daughter": "Don't talk to me or my daughter ever again.",
+	"quark.misc.my_child": "Don't talk to me or my child ever again.",
+	"quark.misc.my_children": "Don't talk to me or my children ever again.",
 
+	"quark.misc.you_came_to_the_wrong_neighborhood.0": "Six letter word just to get me along",
+	"quark.misc.you_came_to_the_wrong_neighborhood.1": "It's a intricacy and I'm coding on my mod and I,",
+	"quark.misc.you_came_to_the_wrong_neighborhood.2": "I keep fixin', and keepin' it together",
+	"quark.misc.you_came_to_the_wrong_neighborhood.3": "People around gotta find something to play now",
+	"quark.misc.you_came_to_the_wrong_neighborhood.4": "Holding back, every mod's the same",
+	"quark.misc.you_came_to_the_wrong_neighborhood.5": "Don't wanna be a loser",
+	"quark.misc.you_came_to_the_wrong_neighborhood.6": "Listen to me, oh no, I don't break anything at all",
+	"quark.misc.you_came_to_the_wrong_neighborhood.7": "But with nothing to consider they forget my name",
+	"quark.misc.you_came_to_the_wrong_neighborhood.8": "'ame, 'ame, 'ame",
+	"quark.misc.you_came_to_the_wrong_neighborhood.9": "They call me Vaskii",
+	"quark.misc.you_came_to_the_wrong_neighborhood.10": "They call me Vazki",
+	"quark.misc.you_came_to_the_wrong_neighborhood.11": "They call me Voskii",
+	"quark.misc.you_came_to_the_wrong_neighborhood.12": "They call me Vazkki",
+	"quark.misc.you_came_to_the_wrong_neighborhood.13": "That's not my name",
+	"quark.misc.you_came_to_the_wrong_neighborhood.14": "That's not my name",
+	"quark.misc.you_came_to_the_wrong_neighborhood.15": "That's not my name",
+	"quark.misc.you_came_to_the_wrong_neighborhood.16": "That's not my name",
+	
 	"quark.misc.reloaded0": "La tua configurazione di quark è stata ricaricata.",
 	"quark.misc.reloaded1": "- Se hai cambiato qualcosa che cambierebbe le ricette, esegui /ricarica.",
 	"quark.misc.reloaded2": "- Se le modifiche non sono state applicate, prova a riavviare il gioco.",
@@ -312,6 +351,7 @@
 	"item.quark.diamond_heart": "Cuore di diamante",
 	"item.quark.ancient_tome": "Tomo antico",
 	"item.quark.frog_leg": "Coscia di rana cruda",
+	"item.quark.frog_leg_maybe": "\"Coscia\" di rana cruda",
 	"item.quark.cooked_frog_leg": "Coscia di rana cotta",
 	"item.quark.golden_frog_leg": "Coscia di rana d'oro",
 	"item.quark.crab_leg": "Zampa di granchio cruda",
@@ -330,7 +370,11 @@
 	"item.quark.abacus": "Abaco",
 	"item.quark.azalea_boat": "Barca di azalea",
 	"item.quark.blossom_boat": "Barca di fiore",
-
+	"item.quark.egg_parrot_red_blue": "Uovo di pappagallo rosso",
+	"item.quark.egg_parrot_blue": "Uovo di pappagallo blu",
+	"item.quark.egg_parrot_green": "Uovo di pappagallo verde",
+	"item.quark.egg_parrot_yellow_blue": "Uovo di pappagallo ciano",
+	"item.quark.egg_parrot_grey": "Uovo di pappagallo grigio",
 	"item.quark.music_disc_tedium": "Disco musicale",
 	"item.quark.music_disc_tedium.desc": "Kain Vinosec - Tedium",
 	"item.quark.music_disc_drips": "Disco ambiente",
@@ -954,7 +998,6 @@
 	"block.quark.tuff_wall": "Muretto di tufo",
 	"block.quark.tuff_bricks_wall": "Muretto di mattoni di tufo levigato",
 	"block.quark.iron_pillar": "Pilastro di ferro",
-	"block.quark.iron_ladder": "Scala a pioli di ferro",
 	"block.quark.deepslate_furnace": "Fornace di ardesia profonda",
 	"block.quark.blackstone_furnace": "Fornace di pietranera",
 	"block.quark.glow_lichen_growth": "Crescita di lichene luminescente",
@@ -980,7 +1023,7 @@
 	"block.quark.azalea_trapdoor": "Botola di azalea",
 	"block.quark.azalea_fence_gate": "Cancelletto di azalea",
 	"block.quark.azalea_fence": "Staccionata di azalea",
-	"block.quark.blossom_planks": "Assi di azalea",
+	"block.quark.blossom_planks": "Assi di fiore",
 	"block.quark.blossom_log": "Tronco di fiore",
 	"block.quark.stripped_blossom_log": "Tronco di fiore scortecciato",
 	"block.quark.blossom_wood": "Legno di fiore",
@@ -1004,6 +1047,16 @@
 	"block.quark.blossom_pressure_plate": "Pedana a pressione di fiore",
 	"block.quark.azalea_button": "Pulsante di azalea",
 	"block.quark.azalea_pressure_plate": "Pedana a pressione di azalea",
+	"block.quark.vertical_oak_planks": "Assi verticali di quercia",
+	"block.quark.vertical_spruce_planks": "Assi verticali di abete",
+	"block.quark.vertical_birch_planks": "Assi verticali di betulla",
+	"block.quark.vertical_jungle_planks": "Assi verticali della giungla",
+	"block.quark.vertical_acacia_planks": "Assi verticali di acacia",
+	"block.quark.vertical_dark_oak_planks": "Assi verticali di quercia scura",
+	"block.quark.vertical_warped_planks": "Assi verticali distorti",
+	"block.quark.vertical_crimson_planks": "Assi verticali cremisi",
+	"block.quark.vertical_azalea_planks": "Assi verticali di azalea",
+	"block.quark.vertical_blossom_planks": "Assi verticali di fiore",
 	
 	"item.quark.stoneling_spawn_egg": "Uovo generatore di stoneling",
 	"item.quark.frog_spawn_egg": "Uovo generatore di rana",
@@ -1063,4 +1116,10 @@
 	"block.quark.potted_weeping_vines": "Vaso con rampicante piangente",
 	"block.quark.potted_wheat": "Vaso con grano",
 	"block.quark.potted_yellow_blossom_sapling": "Vaso con arboscello di fiori del sole"
+	"block.quark.potted_glow_lichen_growth": "Vaso con lichene luminescente",
+	"block.quark.potted_glow_shroom": "Vaso con fungo luminescente",
+	"block.quark.tiny_potato": "Patata piccola",
+	"block.quark.tiny_potato.angry": "Patata arrabbiata",
+
+	"biome.quark.glimmering_weald": "Foresta scintillante"
 }
